--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run install:server",
-    "install:server": "npm install --include=dev",
+    "install:server": "cd server && npm install --include=dev",
     "start": "cd server && npm start"
   },
   "author": "",
